updated rules to have sign in info

--- a/app/views/bullshits/rules.html.erb
+++ b/app/views/bullshits/rules.html.erb
@@ -1,5 +1,8 @@
 <p>This is a private CTF by Maxim. If you werent invited by me, please do not attack it. There is nothing to be found here anyways.</p>
 <p>Code can be found here https://github.com/mlapis/privateCTF</p>
+<p>To log in as the attacking user goto http://49.13.158.237:5001/users/sign_in</p>
+<p>email: test@example.com</p>
+<p>password: examplepassword</p>
 <p>Following challenges are currently included:</p>
 <p>Access http://49.13.158.237:5001/bullshits/1</p>
 <p>The same flag might be accessed via http://49.13.158.237:5001/bullshits/search?search=</p>
