--- a/app/views/bullshits/rules.html.erb
+++ b/app/views/bullshits/rules.html.erb
@@ -8,7 +8,7 @@
 <p>The same flag might be accessed via http://49.13.158.237:5001/bullshits/search?search=</p>
 <p>Access http://49.13.158.237:5001/bullshits/basic_auth username: user password: ???</p>
 <p>Change hidden_parameter of bullshit to "admin"<p>
-<p>The CTF has a no intended fault lines. I coded very sloppily, but did not include weak points on purpose. I would be glad if you abuse Rails issue, but this was hosted with nginx + dokku and attacking it this way is fair too. Sorry for having a bit messy git history. </p>
+<p>The CTF has a no intended fault lines. I coded very sloppily, but did not include weak points on purpose. I would be glad if you abuse Rails issues, but this was hosted with nginx + dokku and attacking it this way is fair too. Sorry for having a bit messy git history. </p>
 <p>I did create it, but I am on your side. If you need any help with understanding Ruby or Rails or anything, ask me. Only thing I wont give you are the passwords.</p>
 <p>If you have good ideas for additional challenges, I can gladly add those</p>
 <p>This is some embarrasingly coded shit, but I am curious. Do your worst! </p>
